--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>KiRa.com</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <script type="text/javascript" src="js/navbar.js"></script>
+    <link rel="icon" href="images/logotop.png" type="image/x-icon">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/headsection.css">
