--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Contact us</title>
+    <link rel="icon"type=" image/png" href="images/logotop.png">
     <link rel="stylesheet" href="css/contacthtml.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="fontawesome/css/font-awesome.min.css">
