--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
     <fieldset>
       <center><button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button></center>
     </fieldset>
-    <p class="copyright">Designed by <a href="#" target="_blank" title="Colorlib">Kishor Shrestha</a></p>
+    <p class="copyright">Designed by <a href="#" target="_blank" >Kishor Shrestha</a></p>
   </form>
 </div>
 
